--- a/Day_1/sounds/index.html
+++ b/Day_1/sounds/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <div class="keys">
+        <!-- Keys Class start here -->
         <div data-key="65" class="key">
             <kbd>A</kbd>
             <span class="sound">clap</span>
@@ -40,6 +41,7 @@
             <kbd>J</kbd>
             <span class="sound">snare</span>
         </div>
+        
         <div data-key="75" class="key">
             <kbd>K</kbd>
             <span class="sound">tom</span>
